# Mice

./: .flake8  .gitignore  README.rst  mypy.ini  pyproject.toml  x.py
.github/workflows/: pythonapp.yml
scripts/: x.py
src/ecs/: __main__.py  component.py  entity.py  executor.py  genid.py  system.py  systems.py  world.py
src/ecs/executor/: __init__.py  abc.py  async.py  policy.py  simple.py
src/example/: __main__.py  components.py  resources.py  systems.py
src/example/systems/: __init__.py  grid_view.py  move_ball.py
src/libmice/: autoregister.py
src/libmice/common/: components.py  resources.py
src/libmice/common/systems/: __init__.py  update_time.py
src/libmice/systems/: abc.py  func.py  query.py
src/mice/: __init__.py  __main__.py  abc.py  components.py  entity.py  game.py  resources.py  system_helpers.py  systems.py  world_builder.py
src/mice/common/: components.py  resources.py  systems.py
src/mice_common/: __init__.py  autoregister.py  components.py  resources.py  system_helpers.py  systems.py
src/pygame_plugin/: __init__.py  components.py  systems.py
src/pygame_plugin/systems/: __init__.py  draw_images.py  draw_window.py  window_events.py
src/snake/: __main__.py  components.py  resources.py
src/snake/systems/: __init__.py  draw_snake.py  draw_squares.py  grid_view.py  kill_player.py  move_player.py  spawn_food.py
tests/: test_mice.py  test_system_queries.py
tests/libmice/systems/: test_query.py
