[tool.poetry]
name = "mice"
version = "0.1.0"
description = "A simple game engine on top of pygame"
license = "MIT"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]
packages = [ 
    { include = "mice", from = "src" },
    { include = "libmice", from = "src" },
    { include = "pygame_plugin", from = "src" },
    { include = "ecs", from = "src" },
    { include = "example", from ="src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2" 
pylint = "^2.4.4"
flake8 = "^3.7.9"
black = "^19.10b0"
typer = "^0.0.10"
rope = "^0.16.0"
profiling = "^0.1.3"

[tool.black]
line-lenght = 79

[tool.poetry.scripts]
x = 'scripts.x:main'

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"

